--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
     <string name="openai_name">OpenAI</string>
     <string name="incomplete_configuration">Configuration is incomplete</string>
     <string name="openai_guide"><![CDATA[Create your API key at <a href=\"https://platform.openai.com/api-keys\">https://platform.openai.com/api-keys</a>.]]></string>
+    <string name="claude_guide"><![CDATA[Create your API key at <a href=\"https://console.anthropic.com/\">https://console.anthropic.com/</a>.]]></string>
     <string name="openai_organization">Organization (optional)</string>
     <string name="settings_model">Model</string>
     <string name="settings_preset_prompt">Preset prompt</string>
@@ -24,4 +25,6 @@
     <string name="button_copy_to_clipboard">Copy to Clipboard</string>
     <string name="button_retry">Retry</string>
     <string name="loading">Loading…</string>
+    <string name="error_no_response">No response</string>
+    <string name="claude_name">Anthropic Claude</string>
 </resources>
