--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,5 @@
     <string name="button_update">Update</string>
     <string name="incomplete_configuration_prompt">API config is incomplete. Please enter your API details in Settings.</string>
     <string name="no_preset_prompt">You can set a default prompt for generating alt text.</string>
+    <string name="button_cancel">Cancel\n</string>
 </resources>
