--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,4 +42,11 @@
     <string name="guide_generate">Generate alt text from images</string>
     <string name="guide_generate_description">Share a photo from any app to generate alt text, or choose a picture using the button below.</string>
     <string name="button_pick_a_picture">Pick a picture</string>
+    <string name="default_prompt_text">Write an ALT text for the picture for use on social media. Include any text found inside.</string>
+    <!-- TRANSLATORS: %1$s is the number of the step, %2$s is the state of the step, one of step_state_failed, step_state_completed, step_state_active, or step_state_upcoming. -->
+    <string name="step_content_description">Step %1$s: %2$s</string>
+    <string name="step_state_failed">failed</string>
+    <string name="step_state_completed">completed</string>
+    <string name="step_state_active">active</string>
+    <string name="step_state_upcoming">upcoming</string>
 </resources>
